<resources>
    <string name="app_name">weGo</string>
    <string name="qq_login">QQ 登陆</string>
    <string name="wechat_login">微信登陆</string>
    <string name="phone_login">手机登陆</string>
    <string name="please_input_search">请输入要搜索的内容</string>
    <string name="find">发现</string>
    <string name="recom">推荐</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="cancel">取消</string>

    <string name="perinfo">个人资料</string>
    <string name="from_album">从相册选择</string>
    <string name="head_portrait">头像</string>
    <string name="nick">昵称</string>
    <string name="usern">用户名</string>
    <string name="not_set">未设置</string>

    <string name="picture_path_error">图片路径错误</string>
    <string name="camera_power">请开启拍照权限</string>
    <string name="phone_power">请开启手机权限</string>
    <string name="select_picture">请选择图片</string>

</resources>
