<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/main_blue">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:text="@string/qq_login"
            style="@style/login_border_style"
            />
        <TextView
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/wechat_login"
            style="@style/login_border_style"
            />
        <TextView
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/phone_login"
            style="@style/login_border_style"
            />
    </LinearLayout>

</FrameLayout>