<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <wego.com.widget.SingleTabTiltle
        android:id="@+id/tab_title"
        android:layout_width="match_parent"
        android:layout_height="44.7dp"
        android:background="@color/main_blue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />


    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/head_portrait"
            android:textColor="@color/login_title"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_detail_avator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/rl_arrow_avator"
            android:src="@mipmap/ic_launcher_round" />

        <RelativeLayout
            android:id="@+id/rl_arrow_avator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/item_enter" />
        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_nickname"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nick"
            android:textColor="@color/login_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_me_nickName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            android:maxLength="30"
            android:text="@string/not_set"
            android:textColor="@color/text_gray1"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rl_arrow_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/item_enter" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/usern"
            android:textColor="@color/login_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:textColor="@color/text_gray1"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="手机号码"
            android:textColor="@color/login_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_uid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="5dp"
            android:textColor="@color/text_gray1"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_sex"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="性别"
            android:textColor="@color/login_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_me_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/not_set"
            android:textColor="@color/text_gray1"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rl_me_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@mipmap/item_enter" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_birth"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="联系方式"
            android:textColor="@color/login_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_me_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/not_set"
            android:textColor="@color/text_gray1"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/rl_me_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@mipmap/item_enter" />
        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="退出登录"
        android:textColor="@color/login_title"
        android:textSize="15sp" />

</LinearLayout>